#
#  Name: RELEASE_NOTES
#
#  Rem:  This files describes release notes for 
#        the FastFeedback IOC Application.        
#
#  Auth: 19-May-2015, L. Piccoli         (lpiccoli)
#        18-Nov-2015, A. Babbitt         (ababbitt)
#               2017, J. Mock            (jmock)
#      
#==============================================================
#
FastFeedback-R1-0-23 24-Apr-2018  Jeremy Mock (jmock)
  Modify feedback convergence PVs to comply with naming standards

FastFeedback-R1-0-22 24-Apr-2018  James Luong (ajluong)
  Revision of FastFeedback-R1-0-21.
  Modify st.cmd for sioc-sys0-fb01

FastFeedback-R1-0-21 11-Apr-2018  James Luong (ajluong)
  Revision of sioc-sys0-fb01 for convergence functionality.
  Change architecture to linux-x86.
  CATER: 138128

FastFeedback-R1-0-20 20-Mar-2018  James Luong (ajluong)
  Add sioc-sys0-fb01 for convergence functionality.
  CATER: 138128
  *DO NOT USE THIS TAG

FastFeedback-R1-0-19 13-Feb-2018  Jeremy Mock (JMOCK)
  Change Longitudinal::updateActuator() so that the offset PV is
  directly applied to the actuator value sent on fcom.  This will
  allow users to put in offsets for different patterns.

FastFeedback-R1-0-18 22-Aug-2017  Jeremy Mock (JMOCK)
  Fix fastFeedBackApp/src/framework/Loop.cc (and many other places)
    The function call to "evrTimePutPulseID" was not applied in all
    cases for linux builds (only applied with #ifdef for RTEMS builds).
    When the code was written, linux support for evr was not available,
    so when running on linux, the pulse ID was not applied to the
    end of the timestamp.  The BLD IOC was checking for the pulse ID, not
    finding the correct one, and rejecting the data from the FBCK:FB05:TR05
    (fast Undulator).  This #ifdef condition has been removed from everywhere
    it appeared. 

FastFeedback-R1-0-17 22-Aug-2017  Jeremy Mock (JMOCK)
  Fix vioc-sys0-lgo1/st-on.cmd broken link in PHASE_LNK

FastFeedback-R1-0-16 19-Jul-2017  Jeremy Mock (JMOCK)