@@ -1,0 +1,1 @@
+PKG_ARCH=$(LINUXRT_BUILDROOT_VERSION)-x86_64
