@@ -1,36 +1,0 @@
--include $(TOP)/configure/CONFIG_SITE
-
-# For the buildroot-2015.02-x86_64 embedded system target
-
-#External Library Packages for Fast Feedback
-CPPUNIT=$(PACKAGE_SITE_TOP)/cppunit/$(CPPUNIT_PACKAGE_VERSION)/buildroot-2015.02-x86_64
-BOOST=$(PACKAGE_SITE_TOP)/boost/$(BOOST_PACKAGE_VERSION)/buildroot-2015.02-x86_64
-BOOSTBINDINGS=$(PACKAGE_SITE_TOP)/boost-numeric-bindings/$(BOOSTBINDINGS_PACKAGE_VERSION)
-LAPACK=$(PACKAGE_SITE_TOP)/lapack/$(LAPACK_PACKAGE_VERSION)/buildroot-2015.02-x86_64
-
-
-# Define the location of the gfortran
-# So only need to define location of libs and headers
-BUILDROOT_HOME=$(PACKAGE_SITE_TOP)/linuxRT/buildroot-2015.02-x86_64
-STAGE_X86=$(BUILDROOT_HOME)/buildroot-2015.02-x86_64/output/staging
-
-GFORT_LIB     = $(STAGE_X86)/usr/lib64
-GFORT_INCLUDE = $(STAGE_X86)/usr/include
-
-DL_LIB       = $(STAGE_X86)/usr/lib64
-DL_INCLUDE   = $(STAGE_X86)/usr/include
-
-QUADMATH_LIB       = $(STAGE_X86)/usr/lib64
-QUADMATH_INCLUDE   = $(STAGE_X86)/usr/include
-
-#EVR Sharing - Need to pull in header files for EVRMA 
-##NOTE: SETTABLE_CONFIG
-KERNEL_MODULE_EVRMA=$(PACKAGE_SITE_TOP)/linuxKernel_Modules/evrmaDriver/$(EVRMA_PACKAGE_VERSION)
- 
-#NOTE: SETTABLE_CONFIG
-EVRMA=$(PACKAGE_SITE_TOP)/evrma/$(EVRMA_PACKAGE_VERSION)/buildroot-2015.02-x86_64
- 
-EVRMA_LIB     = $(EVRMA)/lib
-EVRMA_INCLUDE = -I$(EVRMA)/include
-KERNEL_MODULE_EVRMA_INCLUDE = -I$(KERNEL_MODULE_EVRMA)/src
-
