@@ -1,0 +1,1 @@
+PKG_ARCH=$(LINUX_VERSION)-x86_64
